# osm_pi

./: .gitignore  CMakeLists.txt  README
include/: db.h  factory.h  icons.h  osm.h  osm.hpp  seamarks.h  ui.h
include/readosm/: osmxml.c  protobuf.c  readosm.c  readosm_internals.h
po/: POTFILES.in
src/: db.cpp  db.h  downloader.cpp  downloader.h  factory.cpp  factory.h  icons.cpp  icons.h  osm_pi.cpp  osm_pi.h  osmdb.cpp  osmdb.h  osmdownloader.cpp  osmdownloader.h  osmgui.cpp  osmgui.h  osmgui_impl.cpp  osmgui_impl.h  prefdlg.cpp  prefdlg.h  seamarks.cpp  ui.cpp  ui.h
src/icons/: icons.bat
src/icons/seamarks/: generate.sh
src/readosm/: osm_objects.c  readosm.h  readosm_protobuf.h
